Resolve overflow in swiping maps

--- a/_sass/map-style.scss
+++ b/_sass/map-style.scss
@@ -8,6 +8,7 @@ body {
   flex-direction: row;
   height: 100vh;
   margin: 0;
+  overflow: hidden;
   padding: 0;
 }
 
